Fix position and spacing

--- a/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.scss
@@ -155,6 +155,7 @@ p {
   align-items: center;
   gap: 10px;
   margin-left: 16px;
+  margin-top: 12px;
 }
 
 .quick-filters-label {
