--- a/alcs-frontend/src/app/features/notice-of-intent/decision/conditions/conditions.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/conditions/conditions.component.scss
@@ -154,6 +154,7 @@ p {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-top: 12px;
   margin-left: 16px;
 }
 
